testsuite/tests/vdq-rta/should_fail/T24176.hs
{-# LANGUAGE QuantifiedConstraints, RequiredTypeArguments #-}
module T24176 where

f :: (forall a -> Eq a) => a
f = f
